# PassGen-Gui

./: .gitignore  LICENSE  pyproject.toml
app/: passgen-gui.py
