[tool.poetry]
name = "Pass-Gen GUI"
version = "0.1.0"
description = ""
authors = ["Simon Tallmyr"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-github-actions-annotate-failures = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
